--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<base href="https://reagan13.github.io/coffee-landing-page/" />
-
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Contact Us - Coffee Shop</title>
@@ -13,12 +11,13 @@
 	<body>
 		<!-- Navigation (Same as index.html) -->
 		<nav class="navbar">
-			<div class="logo">Caffeine</div>
+			<a href="#" class="logo">Caffeine</a>
+
 			<ul class="nav-menu">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="#" class="active">Contact</a></li>
+				<li><a href="#" style="color: #c17f59">Contact</a></li>
 			</ul>
 			<div class="nav-right">
 				<a href="signup.html" class="sign-in">Sign Up</a>
