--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<base href="https://reagan13.github.io/coffee-landing-page/" />
-
 		<meta charset="UTF-8" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,9 +10,10 @@
 	<body>
 		<!-- Navigation -->
 		<nav class="navbar">
-			<div class="logo">Caffeine</div>
+			<a href="#" class="logo">Caffeine</a>
+
 			<ul class="nav-menu">
-				<li><a href="#" class="active">Home</a></li>
+				<li><a href="#" style="color: #c17f59">Home</a></li>
 				<li><a href="products.html">Products</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
@@ -36,8 +35,12 @@
 				</p>
 
 				<div class="hero-buttons">
-					<a href="#" class="btn primary">Order Now</a>
-					<a href="#" class="btn secondary">Explore More</a>
+					<a href="products.html" target="_blank" class="btn primary"
+						>Order Now</a
+					>
+					<a href="products.html#menu" target="_blank" class="btn secondary"
+						>Explore More</a
+					>
 				</div>
 				<div class="stats">
 					<div class="stat-box">
@@ -73,7 +76,9 @@
 						passion meets perfection. From bold espressos to creamy lattes, our
 						blends are crafted to awaken your senses and brighten your day.
 					</p>
-					<a href="#" class="view-all">View All →</a>
+					<a href="products.html#menu" target="_blank" class="view-all"
+						>View All →</a
+					>
 				</div>
 			</div>
 			<div class="coffee-item coffee-item-reverse">
@@ -90,7 +95,12 @@
 						moment special.
 					</p>
 
-					<a href="#" class="view-all">View All →</a>
+					<a
+						href="products.html#best-delivered"
+						target="_blank"
+						class="view-all"
+						>View All →</a
+					>
 				</div>
 			</div>
 		</section>
@@ -106,10 +116,12 @@
 			</p>
 
 			<div class="coffee-filters">
-				<button class="active">All</button>
-				<button>Black</button>
-				<button>Espresso</button>
-				<button>Doppio</button>
+				<a href="products.html#menu" target="_blank"><button>All</button></a>
+				<a href="products.html#menu" target="_blank"><button>Black</button></a>
+				<a href="products.html#menu" target="_blank"
+					><button>Espresso</button></a
+				>
+				<a href="products.html#menu" target="_blank"><button>Doppio</button></a>
 			</div>
 
 			<div class="coffee-grid">
@@ -120,7 +132,9 @@
 						<h3>Cappuccino</h3>
 					</div>
 					<div class="card-bottom">
-						<button>Order Now</button>
+						<a href="products.html#menu" target="_blank"
+							><button>Order Now</button></a
+						>
 					</div>
 					<div class="card-image">
 						<img
@@ -137,7 +151,9 @@
 						<h3>Americano</h3>
 					</div>
 					<div class="card-bottom">
-						<button>Order Now</button>
+						<a href="products.html#menu" target="_blank"
+							><button>Order Now</button></a
+						>
 					</div>
 					<div class="card-image">
 						<img
@@ -154,7 +170,9 @@
 						<h3>Espresso</h3>
 					</div>
 					<div class="card-bottom">
-						<button>Order Now</button>
+						<a href="products.html#menu" target="_blank"
+							><button>Order Now</button></a
+						>
 					</div>
 					<div class="card-image">
 						<img
@@ -183,7 +201,9 @@
 				</div>
 				<div class="email-signup">
 					<input type="email" placeholder="Enter Your Email Address" />
-					<button type="submit">→</button>
+					<a href="contact.html" target="_blank"
+						><button style="color: white">Subscribe</button></a
+					>
 				</div>
 			</div>
 		</section>
@@ -200,7 +220,9 @@
 					beans and expert craftsmanship.
 				</p>
 
-				<a href="contact.html" class="contact-btn">Contact Us</a>
+				<a href="contact.html" target="_blank" class="contact-btn"
+					>Contact Us</a
+				>
 
 				<p class="copyright">© 2024 Caffeine Coffee Shop</p>
 			</div>
@@ -209,27 +231,29 @@
 		<!-- Footer Navigation -->
 		<footer class="minimal-footer">
 			<div class="footer-container">
-				<div class="footer-logo">
-					<h2>Caffeine</h2>
-				</div>
+				<a href="index.html" class="footer-logo">Caffeine</a>
 
 				<nav class="footer-nav">
 					<ul>
-						<li><a href="about.html#team">Team</a></li>
-						<li><a href="about.html">Our Story</a></li>
-						<li><a href="products.html">Menu</a></li>
+						<li><a href="about.html#team" target="_blank">Team</a></li>
+						<li><a href="about.html#story" target="_blank">Our Story</a></li>
+						<li><a href="products.html" target="_blank">Menu</a></li>
 					</ul>
 				</nav>
 
 				<div class="social-links">
-					<a href="#" aria-label="Tiktok">
+					<a
+						href="https://www.tiktok.com/@fine_coffee24?_t=8rQDjzIs6Dw&_r=1"
+						target="_blank"
+						aria-label="Tiktok"
+					>
 						<img
 							src="https://img.freepik.com/premium-vector/tiktok-logo-sticker_941327-31.jpg?semt=ais_hybrid"
-							alt="LinkedIn"
+							alt="TikTOk"
 							class="social-icon"
 						/>
 					</a>
-					<a href="#" aria-label="Facebook">
+					<a href="https://www.facebook.com/fine.coffee.2024 " target="_blank">
 						<img
 							src="https://png.pngtree.com/element_our/sm/20180506/sm_5aeedeff67ded.png"
 							alt="Facebook"
@@ -237,10 +261,20 @@
 						/>
 					</a>
 
-					<a href="#" aria-label="YouTube">
+					<a href="https://www.youtube.com/@FineCoffee-h5m" target="_blank">
 						<img
 							src="https://i.pinimg.com/originals/7d/dc/54/7ddc545046b212d9ecc8eef83569222b.jpg"
 							alt="YouTube"
+							class="social-icon"
+						/>
+					</a>
+					<a
+						href="https://www.instagram.com/finecoffee3/profilecard/?igsh=dXJkaWFld3lseXhk"
+						target="_blank"
+					>
+						<img
+							src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1024px-Instagram_logo_2022.svg.png"
+							alt="Instagram"
 							class="social-icon"
 						/>
 					</a>
