--- a/products.html
+++ b/products.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<base href="https://reagan13.github.io/coffee-landing-page/" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Products - Coffee Shop</title>
@@ -10,10 +9,11 @@
 	<body>
 		<!-- Navigation -->
 		<nav class="navbar">
-			<div class="logo">Caffeine</div>
+			<a href="#" class="logo">Caffeine</a>
+
 			<ul class="nav-menu">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="#" class="active">Products</a></li>
+				<li><a href="#" style="color: #c17f59">Products</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
@@ -60,6 +60,7 @@
 
 		<!-- Best Delivered Categories -->
 		<section
+			id="best-delivered"
 			class="best-delivered"
 			style="background-color: #1a0f0f; color: white"
 		>
@@ -104,7 +105,7 @@
 		</section>
 
 		<!-- Regular Menu -->
-		<section class="regular-menu" style="background-color: #f5ebe0">
+		<section class="regular-menu" style="background-color: #f5ebe0" id="menu">
 			<h2 class="product-section-title">Enjoy a new blend of coffee style</h2>
 			<p class="menu-description">
 				Explore all flavours of coffee with us. There is always a new cup worth
