--- a/signup.html
+++ b/signup.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<base href="https://reagan13.github.io/coffee-landing-page/" />
-
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sign Up - Coffee Shop</title>
@@ -12,7 +10,7 @@
 	</head>
 	<body>
 		<nav class="navbar">
-			<div class="logo">Caffeine</div>
+			<a href="#" class="logo">Caffeine</a>
 			<ul class="nav-menu">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="products.html">Products</a></li>
@@ -20,7 +18,7 @@
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 			<div class="nav-right">
-				<a href="#" class="sign-in">Sign Up</a>
+				<a href="#" class="sign-in" style="color: #c17f59">Sign Up</a>
 				<span class="divider">|</span>
 				<span class="search">🔍</span>
 			</div>
