--- a/signup.html
+++ b/signup.html
@@ -4,9 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sign Up - Coffee Shop</title>
-
-		<!-- Custom CSS -->
 		<link rel="stylesheet" href="styles/main.css" />
+		<link rel="stylesheet" href="styles/responsive.css" />
 	</head>
 	<body>
 		<nav class="navbar">
@@ -74,5 +73,58 @@
 				<img src="images/image1.png" alt="Coffee Art" class="coffee-image" />
 			</div>
 		</div>
+		<!-- Footer Navigation -->
+		<footer class="minimal-footer">
+			<div class="footer-container">
+				<a href="index.html" class="footer-logo">Caffeine</a>
+
+				<nav class="footer-nav">
+					<ul>
+						<li><a href="about.html#team" target="_blank">Team</a></li>
+						<li><a href="about.html#story" target="_blank">Our Story</a></li>
+						<li><a href="products.html" target="_blank">Menu</a></li>
+					</ul>
+				</nav>
+
+				<div class="social-links">
+					<a
+						href="https://www.tiktok.com/@fine_coffee24?_t=8rQDjzIs6Dw&_r=1"
+						target="_blank"
+						aria-label="Tiktok"
+					>
+						<img
+							src="https://img.freepik.com/premium-vector/tiktok-logo-sticker_941327-31.jpg?semt=ais_hybrid"
+							alt="TikTOk"
+							class="social-icon"
+						/>
+					</a>
+					<a href="https://www.facebook.com/fine.coffee.2024 " target="_blank">
+						<img
+							src="https://png.pngtree.com/element_our/sm/20180506/sm_5aeedeff67ded.png"
+							alt="Facebook"
+							class="social-icon"
+						/>
+					</a>
+
+					<a href="https://www.youtube.com/@FineCoffee-h5m" target="_blank">
+						<img
+							src="https://i.pinimg.com/originals/7d/dc/54/7ddc545046b212d9ecc8eef83569222b.jpg"
+							alt="YouTube"
+							class="social-icon"
+						/>
+					</a>
+					<a
+						href="https://www.instagram.com/finecoffee3/profilecard/?igsh=dXJkaWFld3lseXhk"
+						target="_blank"
+					>
+						<img
+							src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1024px-Instagram_logo_2022.svg.png"
+							alt="Instagram"
+							class="social-icon"
+						/>
+					</a>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
