--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Sign Up - Coffee Shop</title>
+		<title>Sign Up</title>
 		<link rel="stylesheet" href="styles/main.css" />
 		<link rel="stylesheet" href="styles/responsive.css" />
 	</head>
