--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
 			<div class="service-icons">
 				<div class="service-item">
 					<img
-						src="https://media.istockphoto.com/id/814684194/photo/coffee-beans-and-hot-cofee-cup-with-latte-art-on-wooden-background-side-view-with-copy-space.jpg?s=170667a&w=0&k=20&c=MLDjP4PndUT7rz8zRDmST3-tBgxhPdZXmOZ3jAeIcdY="
+						src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUbKTxGT5Cu_lnZoBtCfuJlp1Us1unx49uBg&s"
 					/>
 
 					<h3>Free Shipping</h3>
@@ -201,7 +201,7 @@
 
 				<div class="service-item">
 					<img
-						src="https://media.istockphoto.com/id/814684194/photo/coffee-beans-and-hot-cofee-cup-with-latte-art-on-wooden-background-side-view-with-copy-space.jpg?s=170667a&w=0&k=20&c=MLDjP4PndUT7rz8zRDmST3-tBgxhPdZXmOZ3jAeIcdY="
+						src="https://upload.wikimedia.org/wikipedia/commons/a/ab/In_coffe-shop.jpg"
 					/>
 
 					<h3>Custom Coffee Blends</h3>
